2009-10-26  Anton Muhin  <antonm@chromium.org>

        Reviewed by Dimitri Glazkov.

        Unbreak Chromium build: that requires adding custom implementations
        for HTMLOptionsCollection's item and namedItem.  Keep v8 binding
        close to JSC bindings as well.
        https://bugs.webkit.org/show_bug.cgi?id=30780

        * bindings/v8/V8Collection.h:
        (WebCore::getNamedItemsFromCollection):
        (WebCore::getItemFromCollection):
        * bindings/v8/custom/V8CustomBinding.h:
        * bindings/v8/custom/V8HTMLAllCollectionCustom.cpp:
        (WebCore::NAMED_PROPERTY_GETTER):
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8HTMLCollectionCustom.cpp:
        (WebCore::NAMED_PROPERTY_GETTER):
        (WebCore::CALLBACK_FUNC_DECL):
        * bindings/v8/custom/V8HTMLOptionsCollectionCustom.cpp:
        (WebCore::CALLBACK_FUNC_DECL):

2009-10-23  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Adam Barth and Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=30723
        <rdar://problem/6189415> Input names added to multipart/form-data headers need to be escaped.

        Test: http/tests/security/escape-form-data-field-names.html

        * platform/network/FormDataBuilder.cpp:
        (WebCore::appendQuotedString):
        (WebCore::FormDataBuilder::beginMultiPartHeader):
        (WebCore::FormDataBuilder::addFilenameToMultiPartHeader):
        Percent-escape line breaks and quotation marks.

2009-10-26  Kelly Norton  <knorton@google.com>

        Reviewed by Pavel Feldman.

        Adds DOMTimer support to InspectorTimelineAgent.
        https://bugs.webkit.org/show_bug.cgi?id=30467

        * inspector/InspectorTimelineAgent.cpp: Added timer support and fixed some method names.
        (WebCore::InspectorTimelineAgent::didDispatchDOMEvent):
        (WebCore::InspectorTimelineAgent::didLayout):
        (WebCore::InspectorTimelineAgent::didRecalculateStyle):